syntax = "proto3";

package agent.v1;

message RegisterAgentRequest {
  string token = 1;
}

message RegisterAgentResponse {
  string agent_id = 1;
  string status = 2;
}
